# Real-Time-Meshlet-Extraction-from-Scalar-Volumes

./: .clang-tidy  CMakeLists.txt  README.md  build_for_linux.sh  build_for_windows.bat
apps/: CMakeLists.txt
apps/isosurface_renderer/: CMakeLists.txt  isosurface_renderer_app.cpp  isosurface_renderer_app.hpp  main.cpp
cmake_config_in/: framework_cmake_config.hpp.in
framework/: CMakeLists.txt  CPU_UBO_types.hpp  available_shader_programs.hpp  base_camera.cpp  base_camera.hpp  base_gpu_timer.cpp  base_gpu_timer.hpp  base_graphics_context.cpp  base_graphics_context.hpp  base_renderer.cpp  base_renderer.hpp  base_renderer_create_shader_programs.cpp  base_renderer_gui_definition.cpp  base_renderer_key_callback.cpp  base_renderer_types.hpp  base_volume.cpp  base_volume.hpp  base_volume_types.hpp  framework_platform.hpp  framework_utils.cpp  framework_utils.hpp  shader_program.cpp  shader_program.hpp  shader_types.hpp  unified_derived_mc_tables.hpp
framework/OpenGL_impl/: opengl_UBOs.hpp  opengl_context.cpp  opengl_context.hpp  opengl_extensions_struct.hpp  opengl_gpu_timer.cpp  opengl_gpu_timer.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_renderer__render_isosurface_indirectly_persistent_extraction.cpp  opengl_volume.cpp  opengl_volume.hpp  opengl_volume_gpu_upload.cpp
glsl/auxiliary_visualizations/: coordinate_system_axes_vis.frag  coordinate_system_axes_vis.vert  culling_reference_camera_frustum_line_vis.frag  culling_reference_camera_frustum_line_vis.mesh  volume_boundary_vis.frag  volume_boundary_vis.mesh
glsl/common_shading_models/: common_VBO_and_meshlet_buffers_phong.frag
glsl/compute_shader_based_isosurface_extraction/: dense_occupancy_buffer_computation.comp  min_max_computation_blockwise.comp  parallel_marching_blocks.comp  snapdiv_group_occupied_blocks.comp
glsl/forward_rendering/triangle_mode/: triangle_forward_rendering_from_VBO_phong.vert  triangle_forward_rendering_from_meshlet_buffers_general_geometry_setup.mesh  triangle_forward_rendering_from_meshlet_buffers_general_task_and_mesh.task  triangle_forward_rendering_task_mesh_shader_interface.glsl
glsl/shader_includes/: abstract_mesh_shader_submission_interface.glsl  abstract_task_shader_submission_interface.glsl  atomic_counter_buffer_config.h.glsl  atomic_counters.glsl  const_memory_geometry.glsl  culling.glsl  defines.glsl  marching_cubes_tables.glsl  math.glsl  per_frame_indirect_draw_parameter_ssbo.glsl  per_frame_indirect_draw_parameter_ssbo_config.h.glsl  shading.glsl  ssbos.glsl  ubos.glsl  volumes.glsl
glsl/task_mesh_shader_based_isosurface_extraction/: extraction_task_mesh_shader_interface.glsl  isosurface_extraction.mesh  region_size_analysis.task
raw_volumes/: Dataset_Acknowledgements.txt  chameleon_w256_h256_d256_c1_b16.raw_minmaxoctree_baselevel
